--- a/app/src/main/res/layout/fragment_more_new.xml
+++ b/app/src/main/res/layout/fragment_more_new.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:id="@+id/layout"
-    android:background="@color/colorWhite">
+    android:background="@color/colorWhite"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/llTop"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
-        android:orientation="horizontal"
         android:layout_alignParentTop="true"
         android:background="@color/colorBlack"
+        android:orientation="horizontal"
         android:padding="@dimen/_5sdp">
 
         <TextView
@@ -34,15 +34,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:gravity="center"
+                android:orientation="vertical"
                 android:paddingTop="@dimen/_10sdp">
 
                 <RelativeLayout
@@ -54,83 +56,91 @@
                         android:id="@+id/imgprofileimage"
                         android:layout_width="@dimen/_70sdp"
                         android:layout_height="@dimen/_70sdp"
+                        android:src="@drawable/ic_profile"
                         app:civ_border_color="@color/colorBlack"
-                        app:civ_border_width="1dp"
-                        android:src="@drawable/ic_profile"/>
+                        app:civ_border_width="1dp" />
 
                 </RelativeLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:layout_marginTop="@dimen/_10sdp"
                     android:gravity="center_vertical"
-                    android:layout_marginTop="@dimen/_10sdp">
+                    android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/tvUserName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=""
+                        android:fontFamily="@font/poppins_bold"
                         android:gravity="center"
-                        android:textSize="@dimen/_15sdp"
+                        android:text=""
                         android:textColor="@color/colorGradish"
-                        android:fontFamily="@font/poppins_bold"/>
+                        android:textSize="@dimen/_15sdp" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center_vertical">
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/txtMobileNo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=""
+                        android:fontFamily="@font/poppins_regular"
                         android:gravity="center"
-                        android:textSize="@dimen/_12sdp"
+                        android:text=""
                         android:textColor="@color/colorGradish"
-                        android:fontFamily="@font/poppins_regular"/>
+                        android:textSize="@dimen/_12sdp" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center_vertical">
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/txtEmial"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=""
+                        android:fontFamily="@font/poppins_regular"
                         android:gravity="center"
-                        android:textSize="@dimen/_12sdp"
+                        android:text=""
                         android:textColor="@color/colorGradish"
-                        android:fontFamily="@font/poppins_regular"/>
+                        android:textSize="@dimen/_12sdp" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/llEditProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/bg_card_gray"
+                    android:backgroundTint="@color/colorGray100"
                     android:orientation="horizontal"
                     android:paddingLeft="@dimen/_10sdp"
-                    android:paddingRight="@dimen/_10sdp"
-                    android:backgroundTint="@color/colorGray100"
-                    android:background="@drawable/bg_card_gray">
+                    android:paddingRight="@dimen/_10sdp">
 
                     <TextView
                         android:id="@+id/txtEditProfile"
                         style="@style/ButtonText"
                         android:text="Edit Profile"
-                        android:textColor="@color/colorBlack"/>
+                        android:textColor="@color/colorBlack" />
                 </LinearLayout>
             </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/colorGray100"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"/>
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:background="@color/colorGray100" />
 
             <LinearLayout
                 android:id="@+id/LLManageUser"
@@ -138,125 +148,95 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:padding="@dimen/_10sdp">
+
                 <ImageView
                     android:layout_width="@dimen/_20sdp"
                     android:layout_height="@dimen/_20sdp"
-                    android:src="@drawable/ic_username"
-                    android:layout_gravity="center_vertical|right" />
+                    android:layout_gravity="center_vertical|right"
+                    android:src="@drawable/ic_username" />
+
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_weight="1"
                     android:fontFamily="@font/poppins_semibold"
                     android:text="Manage User"
                     android:textColor="@color/colorBlack"
-                    android:textSize="@dimen/_13sdp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/_10sdp"/>
+                    android:textSize="@dimen/_13sdp" />
+
                 <ImageView
                     android:layout_width="@dimen/_20sdp"
                     android:layout_height="@dimen/_20sdp"
-                    android:src="@drawable/ic_down"
-                    app:tint="@color/colorTextHint"
-                    android:rotation="270"
                     android:layout_gravity="center_vertical|right"
-                    android:background="@drawable/bg_edittext"/>
+                    android:background="@drawable/bg_edittext"
+                    android:rotation="270"
+                    android:src="@drawable/ic_down"
+                    app:tint="@color/colorTextHint" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/colorGray100"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"/>
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:background="@color/colorGray100" />
 
             <LinearLayout
-                android:id="@+id/LLInquiryType"
+                android:id="@+id/LLMaster"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:padding="@dimen/_10sdp">
+
                 <ImageView
                     android:layout_width="@dimen/_20sdp"
                     android:layout_height="@dimen/_20sdp"
-                    android:src="@drawable/ic_username"
-                    android:layout_gravity="center_vertical|right" />
+                    android:layout_gravity="center_vertical|right"
+                    android:src="@drawable/ic_username" />
+
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:text="Inquiry Type"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="@dimen/_13sdp"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/_10sdp"/>
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Masters"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/_13sdp" />
+
                 <ImageView
                     android:layout_width="@dimen/_20sdp"
                     android:layout_height="@dimen/_20sdp"
-                    android:src="@drawable/ic_down"
-                    app:tint="@color/colorTextHint"
-                    android:rotation="270"
                     android:layout_gravity="center_vertical|right"
-                    android:background="@drawable/bg_edittext"/>
+                    android:background="@drawable/bg_edittext"
+                    android:rotation="270"
+                    android:src="@drawable/ic_down"
+                    app:tint="@color/colorTextHint" />
             </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorGray100"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"/>
 
-            <LinearLayout
-                android:id="@+id/LLInquirySubType"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="@dimen/_10sdp">
-                <ImageView
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
-                    android:src="@drawable/ic_username"
-                    android:layout_gravity="center_vertical|right" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:text="Inquiry Sub Type"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="@dimen/_13sdp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/_10sdp"/>
-                <ImageView
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
-                    android:src="@drawable/ic_down"
-                    app:tint="@color/colorTextHint"
-                    android:rotation="270"
-                    android:layout_gravity="center_vertical|right"
-                    android:background="@drawable/bg_edittext"/>
-            </LinearLayout>
 
 
             <LinearLayout
                 android:id="@+id/llLogout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:layout_marginBottom="@dimen/_20sdp"
+                android:layout_alignParentBottom="true"
                 android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:layout_marginRight="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_20sdp"
                 android:background="@drawable/bg_card_gray"
-                android:layout_alignParentBottom="true">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/txtLogout"
                     style="@style/ButtonText"
                     android:text="Logout"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white" />
             </LinearLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
