--- a/app/src/main/res/layout/activity_inquiry_type_list.xml
+++ b/app/src/main/res/layout/activity_inquiry_type_list.xml
@@ -29,7 +29,7 @@
             android:id="@+id/txtHearderText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Inquiry Type"
+            android:text="Inquiry List"
             android:textColor="@color/white"
             android:fontFamily="@font/poppins_regular"
             android:gravity="center"
@@ -78,16 +78,72 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <FrameLayout
+            <LinearLayout
+                android:id="@+id/llInquiryType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_5sdp">
+
+                <TextView
+                    android:id="@+id/txtOpen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg"
+                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:backgroundTintMode="add"
+                    android:fontFamily="@font/poppins_medium"
+                    android:padding="@dimen/_3sdp"
+                    android:text="Open"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_10sdp" />
+
+                <TextView
+                    android:id="@+id/txtClose"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:background="@drawable/bg"
+                    android:backgroundTintMode="add"
+                    android:fontFamily="@font/poppins_medium"
+                    android:padding="@dimen/_3sdp"
+                    android:text="Closed"
+                    android:gravity="center"
+                    android:textColor="@color/colorGray500"
+                    android:textSize="@dimen/_10sdp" />
+
+                <TextView
+                    android:id="@+id/txtAll"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:background="@drawable/bg"
+                    android:backgroundTintMode="add"
+                    android:fontFamily="@font/poppins_medium"
+                    android:padding="@dimen/_3sdp"
+                    android:text="All"
+                    android:gravity="center"
+                    android:textColor="@color/colorGray500"
+                    android:textSize="@dimen/_10sdp" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/FL"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_below="@+id/llInquiryType"
+                android:orientation="vertical"
                 android:visibility="visible">
 
                 <com.facebook.shimmer.ShimmerFrameLayout
                     android:id="@+id/shimmer"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -115,16 +171,19 @@
                         <include layout="@layout/adapter_lead_shimmer_item" />
                     </LinearLayout>
                 </com.facebook.shimmer.ShimmerFrameLayout>
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/RvInquiryTypeList"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="@dimen/_5sdp"/>
-            </FrameLayout>
+                    tools:listitem="@layout/adapter_inquiry_item"/>
+            </LinearLayout>
+
             <RelativeLayout
                 android:id="@+id/RLNoData"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_below="@id/llInquiryType"
                 android:visibility="gone">
 
                 <com.airbnb.lottie.LottieAnimationView
