--- a/app/src/main/res/layout/adapter_attachment_list.xml
+++ b/app/src/main/res/layout/adapter_attachment_list.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:layout_margin="@dimen/_5sdp"
     android:gravity="center"
     android:id="@+id/layout">
 
