--- a/app/src/main/res/layout/adapter_dashboard_inner_item.xml
+++ b/app/src/main/res/layout/adapter_dashboard_inner_item.xml
@@ -50,7 +50,7 @@
                         android:fontFamily="@font/poppins_semibold"/>
 
                     <ImageView
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:id="@+id/imgEdit"
                         android:layout_width="@dimen/_30sdp"
                         android:layout_height="@dimen/_20sdp"
