--- a/app/src/main/res/layout/adapter_nb_item.xml
+++ b/app/src/main/res/layout/adapter_nb_item.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:id="@+id/layout">
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_5sdp"
         app:cardBackgroundColor="@color/bg_gray"
         app:cardCornerRadius="@dimen/_5sdp"
-        android:layout_margin="@dimen/_5sdp"
         app:contentPadding="@dimen/_7sdp">
+
         <LinearLayout
             android:id="@+id/LLStart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:background="@color/shadow_gray"
+            android:orientation="vertical"
             android:padding="@dimen/_1sdp">
 
             <LinearLayout
@@ -30,8 +31,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -40,14 +42,15 @@
                         <TextView
                             android:id="@+id/txtClientName"
                             android:layout_width="0dp"
-                            android:layout_weight="1.5"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1.5"
+                            android:fontFamily="@font/poppins_semibold"
                             android:text=""
                             android:textColor="@color/colorBlack"
-                            android:textSize="@dimen/_12sdp"
-                            android:fontFamily="@font/poppins_semibold" />
+                            android:textSize="@dimen/_12sdp" />
 
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -56,14 +59,15 @@
                         <TextView
                             android:id="@+id/txtInquiryNo"
                             android:layout_width="0dp"
-                            android:layout_weight="1.5"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1.5"
+                            android:fontFamily="@font/poppins_medium"
                             android:text="Inquiry No : "
                             android:textColor="@color/button_primary"
-                            android:textSize="@dimen/_10sdp"
-                            android:fontFamily="@font/poppins_medium" />
+                            android:textSize="@dimen/_10sdp" />
 
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -71,24 +75,48 @@
 
                         <ImageView
                             android:layout_width="@dimen/_25sdp"
-                            android:layout_height="@dimen/_12sdp"
-                            android:src="@drawable/ic_call"
-                            android:layout_gravity="center"/>
+                            android:layout_height="@dimen/_13sdp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_call" />
 
                         <TextView
                             android:id="@+id/txtMobileNo"
-                            android:layout_width="0dp"
-                            android:layout_weight="1.5"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_medium"
+                            android:gravity="center_vertical"
                             android:text=""
                             android:textColor="@color/colorBlack"
-                            android:textSize="@dimen/_10sdp"
-                            android:gravity="center_vertical"
-                            android:fontFamily="@font/poppins_medium" />
+                            android:textSize="@dimen/_10sdp" />
+
+                        <TextView
+                            android:id="@+id/txtOpen"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_medium"
+                            android:background="@drawable/bg"
+                            android:padding="@dimen/_3sdp"
+                            android:layout_marginLeft="@dimen/_10sdp"
+                            android:text="Open"
+                            android:textColor="@color/colorGray500"
+                            android:textSize="@dimen/_10sdp" />
+
+                        <TextView
+                            android:id="@+id/txtClose"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_medium"
+                            android:background="@drawable/bg"
+                            android:padding="@dimen/_3sdp"
+                            android:layout_marginLeft="@dimen/_10sdp"
+                            android:text="Closed"
+                            android:textColor="@color/colorGray500"
+                            android:textSize="@dimen/_10sdp" />
 
                     </LinearLayout>
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -98,87 +126,93 @@
                         android:id="@+id/imgEdit"
                         android:layout_width="@dimen/_30sdp"
                         android:layout_height="0dp"
+                        android:layout_alignParentRight="true"
                         android:layout_weight="1"
                         android:padding="@dimen/_5sdp"
                         android:src="@drawable/ic_edit1"
-                        android:visibility="visible"
-                        android:layout_alignParentRight="true"/>
+                        android:visibility="visible" />
 
                     <ImageView
                         android:id="@+id/imgList"
                         android:layout_width="@dimen/_30sdp"
                         android:layout_height="0dp"
+                        android:layout_alignParentRight="true"
                         android:layout_weight="1"
                         android:padding="@dimen/_5sdp"
                         android:src="@drawable/ic_list"
-                        android:visibility="visible"
-                        android:layout_alignParentRight="true"/>
+                        android:visibility="gone" />
 
                 </LinearLayout>
             </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/colorGray100"
                 android:layout_marginTop="@dimen/_2sdp"
-                android:layout_marginBottom="@dimen/_2sdp"/>
+                android:layout_marginBottom="@dimen/_2sdp"
+                android:background="@color/colorGray100" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginTop="@dimen/_5sdp">
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
                         android:text="Client Type :"
                         android:textColor="@color/colorGray500"
-                        android:textSize="@dimen/_10sdp"
-                        android:fontFamily="@font/poppins_medium"/>
+                        android:textSize="@dimen/_10sdp" />
+
                     <TextView
                         android:id="@+id/txtClientType"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="@dimen/_10sdp"
+                        android:fontFamily="@font/poppins_semibold"
                         android:text="Existing Client"
-                        android:fontFamily="@font/poppins_semibold"/>
+                        android:textColor="@color/colorBlack"
+                        android:textSize="@dimen/_10sdp" />
                 </LinearLayout>
+
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/colorGray100"
                     android:layout_marginTop="@dimen/_8sdp"
-                    android:layout_marginBottom="@dimen/_8sdp"/>
+                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:background="@color/colorGray100" />
+
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:layout_marginLeft="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
-                    android:layout_marginLeft="@dimen/_10sdp">
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
                         android:text="Allotment To :"
                         android:textColor="@color/colorGray500"
-                        android:textSize="@dimen/_10sdp"
-                        android:fontFamily="@font/poppins_medium"/>
+                        android:textSize="@dimen/_10sdp" />
+
                     <TextView
                         android:id="@+id/txtAllotmentTo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="@dimen/_10sdp"
+                        android:fontFamily="@font/poppins_semibold"
                         android:text="Dhruvi Darji"
-                        android:fontFamily="@font/poppins_semibold"/>
+                        android:textColor="@color/colorBlack"
+                        android:textSize="@dimen/_10sdp" />
                 </LinearLayout>
             </LinearLayout>
 
