Committed By Shubham 20-06-2024

--- a/app/src/main/res/drawable/bg_bottom_corner.xml
+++ b/app/src/main/res/drawable/bg_bottom_corner.xml
@@ -4,8 +4,7 @@
         <shape>
             <solid android:color="@color/colorBlack" />
             <corners android:bottomLeftRadius="@dimen/_20sdp"
-                android:bottomRightRadius="@dimen/_20sdp"
-                android:topRightRadius="@dimen/_20sdp"/>
+                android:bottomRightRadius="@dimen/_20sdp"/>
         </shape>
     </item>
 </layer-list>
