--- a/app/src/main/res/layout/activity_add_nbinquiry.xml
+++ b/app/src/main/res/layout/activity_add_nbinquiry.xml
@@ -198,13 +198,14 @@
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorGray500"
-                    android:text="Allotment To"
+                    android:text="Permanent Allotted To"
                     android:textSize="@dimen/_11sdp"
                     android:fontFamily="@font/poppins_regular"/>
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_weight="2"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
                     android:orientation="vertical">
                     <EditText
                         android:id="@+id/edtAllotmentTo"
